fix missing space on contact

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,7 +5,7 @@
     align-items: center;
 
     width: 100%;
-    height: 20vh;
+    height: max(20vh, 200px);
 
     background-color: var(--accent);
 }
